--- a/klacz2.cabal
+++ b/klacz2.cabal
@@ -14,5 +14,7 @@ Description:
 
 
 Executable klacz2
-  Build-depends:  base >= 4 && < 5, fastirc >= 0.3.0, containers, mtl, network-fancy, transformers
+  Build-depends:  base >= 4 && < 5, fastirc >= 0.3.0, containers,
+                  mtl, network-fancy, transformers, bytestring,
+                  attoparsec
   Main-is:        Main.hs
