--- a/klacz2.cabal
+++ b/klacz2.cabal
@@ -16,5 +16,6 @@ Description:
 Executable klacz2
   Build-depends:  base >= 4 && < 5, fastirc >= 0.3.0, containers,
                   mtl, network-fancy, transformers, bytestring,
-                  attoparsec, persistent, persistent-postgresql
+                  attoparsec, persistent, persistent-postgresql,
+                  persistent-template
   Main-is:        Main.hs
